# ludex

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  index.html  package.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
music/: README.md
public/: ludex-audio-worklet.js
scripts/: gen-ludex-icon.py  release.ps1  setup-cores.ps1  svg-to-png.mjs  verify-i18n.mjs
server/: .gitignore  README.md  package.json  wrangler.toml
server/src/: index.js
src/: App.jsx  LudexAchievementsOverlay.jsx  LudexAdminPanel.jsx  LudexCheatsModal.jsx  LudexCommandPalette.jsx  LudexDialog.jsx  LudexEmulatorView.jsx  LudexExtras.jsx  LudexGameDetailPanel.jsx  LudexLauncher.css  LudexLauncher.jsx  LudexLicenseGate.jsx  LudexMobile.css  LudexMobile.jsx  LudexOSK.jsx  LudexOnboarding.jsx  LudexSearchOverlay.jsx  LudexSettingsPanel.jsx  LudexWhatsNew.jsx  PlayboxLauncher.css  PlayboxLauncher.jsx  ludexAmbientMusic.js  ludexChangelog.js  ludexCheats.js  ludexI18n.js  ludexIcons.jsx  ludexMobileAudio.js  ludexMobileFeatures.js  ludexSystemOptions.js  ludexUtils.js  main.jsx
src-tauri/: .gitignore  Cargo.toml  build.rs  playbox-update.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: gl_context.rs  gl_context_android.rs  lib.rs  libretro.rs  secrets.rs.example
test/: gridRenderLimit.test.js  ludexChangelog.test.js
