[package]
name = "ludex"
version = "0.8.14"
description = "Ludex - Sua biblioteca retro em um lugar so"
authors = ["Paulo Batista"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
dirs = "5"
libloading = "0.8"
sha2 = "0.10"
hex = "0.4"

# Deps desktop-only (Windows/Linux/macOS). Nao compilam em Android/iOS.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
gilrs = "0.10"
trash = "5"
discord-rich-presence = "0.2"
mac_address = "1.1"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# Android-only: JNI pra chamar Kotlin Permissions (MANAGE_EXTERNAL_STORAGE).
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
